<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="@color/background_material_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/buttons_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1_label"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:clickable="true"
        android:background="@color/material_deep_teal_200"
        android:onClick="buildToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2_label"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:background="@color/accent_material_dark"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:onClick="buildToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4_label"
        android:id="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:background="@color/accent_material_dark"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:onClick="buildToast"
        android:layout_below="@+id/button2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5_label"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:background="@color/accent_material_dark"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:onClick="buildToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6_label"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_margin_left"
        android:layout_marginRight="@dimen/button_margin_right"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:onClick="buildToast" />

</RelativeLayout>
